# CSRS

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CSRS.md  ENGINEERING.md  OS_REPOS.md  README.md  ROADMAP.md  Submission.md  pyproject.toml
assets/: architecture.html
docs/: README.md
docs/samples/: NIST_CSF_2.0.txt  OWASP_Top_10_2021.txt
eval/: golden_set.yaml  metrics.py  run_eval.py  validate_golden_set.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: Composer.tsx  CorpusExplorer.tsx  EmptyState.tsx  Logo.tsx  Message.tsx  ProgressSteps.tsx  Sidebar.tsx  SourcesCard.tsx  icons.tsx
frontend/src/lib/: api.ts  history.ts
project-docs/: OS_REPOS.md  RESEARCH.md  ROADMAP.md  Submission.md
scripts/: fetch_docs.py  warm_models.py
src/csrs/: __init__.py  app.py  chunking.py  config.py  embeddings.py  generation.py  model_names.py  models.py  pipeline.py  retrieval.py  store.py
src/csrs/api/: __init__.py  app.py
src/csrs/loaders/: __init__.py  base.py  docling_parser.py  pdf.py  text.py
tasks/: lessons.md  todo.md
tests/: test_api.py  test_chunking.py  test_docling_loader.py  test_embeddings.py  test_generation.py  test_metrics.py  test_pdf_loader.py  test_pipeline.py  test_retrieval.py  test_rrf.py  test_store.py
