[project]
name = "csrs"
version = "0.1.0"
description = "Cybersecurity Standards RAG System - fully offline, Ollama-only"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ollama>=0.4.7",
    "chromadb>=0.5.20",
    "bm25s>=0.2.6",
    "PyStemmer>=2.2.0.1",
    "flashrank>=0.2.9",
    "pypdf>=5.1.0",
    "pdfplumber>=0.11.4",
    # Default PDF parser; scripts/warm_models.py fetches its ~1.3 GB weights before runtime.
    "docling>=2.15.0",
    "streamlit>=1.40.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
csrs-api = "csrs.api.app:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.3.0",
]
eval = [
    "pyyaml>=6.0.2",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csrs"]

[tool.ruff]
line-length = 100
src = ["src", "tests", "scripts", "eval"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["eval"]
markers = [
    "ollama: integration test requiring a running Ollama server (deselect with -m 'not ollama')",
    "docling: integration test requiring the Docling model weights (deselect with -m 'not docling')",
    "flashrank: integration test requiring the FlashRank model weights (deselect with -m 'not flashrank')",
]
